# termchat

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/termchat/: __init__.py  entry_points.py  main.py  myapp_base.py  socket_client.py  utils.py
src/termchat/api/: chats.py  users.py  utils.py
src/termchat/database/: chat_queries.py  connection.py  create_tables.py  dto.py  user_queries.py
src/termchat/end_to_end/: decrypt.py  generate_keys.py  store_keys.py
src/termchat/screens/: chat_screen.py  chats_list_screen.py  login_screen.py  users_screen.py
src/termchat/tcss/: app.tcss  list.tcss  messages.tcss  user_list.tcss
src/termchat/widgets/: messages.py
src/textual_test/: __about__.py  entry_points.py  main.py  socket_client.py
src/textual_test/api/: users.py
src/textual_test/database/: dto.py  user_queries.py
src/textual_test/screens/: chat_screen.py
src/textual_test/tcss/: app.tcss
