[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termchat"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Dadamuhames", email = "msd2007msd02@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["textual==0.79.1"]

[project.urls]
Documentation = "https://github.com/Dadamuhames/termchat#readme"
Issues = "https://github.com/Dadamuhames/termchat/issues"
Source = "https://github.com/Dadamuhames/termchat"

[tool.hatch.version]
path = "src/termchat/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/termchat tests}"

[tool.coverage.run]
source_pkgs = ["termchat", "tests"]
branch = true
parallel = true
omit = [
  "src/termchat/__about__.py",
]

[tool.coverage.paths]
termchat = ["src/termchat", "*/termchat/src/termchat"]
tests = ["tests", "*/termchat/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[project.scripts]
termchat = "termchat.entry_points:main"
